--- a/css/app.css
+++ b/css/app.css
@@ -25,7 +25,7 @@ header{
     line-height: 153px;
     text-align: center;
     position: absolute;
-    left: 15px;
+    left: 100px;
     top: -30px;
     cursor: pointer;
     letter-spacing: 1px;
@@ -51,8 +51,11 @@ nav{
 ul li {
     display: inline-block;
 }
+nav ul {
+    margin-right: 100px;
+}
 nav ul li a{
-    padding: 10px 50px;
+    padding: 10px 40px;
 }
 nav ul li:nth-child(1):hover,nav ul li:nth-child(4):hover,nav ul li:nth-child(7):hover {
     background-color: #fff;
@@ -72,6 +75,7 @@ nav ul li:nth-child(6):hover{
 }
 #search{
     text-align: right;
+    margin-right: 100px;
 }
 #search input{
     border-radius: 15px;
